fixed white space behaviour in nav

--- a/src/css/laa-ccms.scss
+++ b/src/css/laa-ccms.scss
@@ -49,6 +49,10 @@ body.owd-has-js {
   	}
   }
 
+  .screen-title{
+    padding-left:30px;
+    padding-right: 0;
+  }
   .submit-break {
     display: none;
   }
@@ -68,12 +72,14 @@ body.owd-has-js {
     border: none;
     a {
       display: block;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
     }
     li {
       padding: 0;
       display: list-item;
       list-style-type: none;
-      word-break: break-all;
+      white-space: normal;
       &.order-stage{
           padding-left:10px;
       }
@@ -95,7 +101,6 @@ body.owd-has-js {
         a {
           text-indent: 0;
           padding-left: 20px;
-          word-break: break-all;
         }
         .active-screen a{
           padding-left:16px;
@@ -210,6 +215,7 @@ body.owd-has-js {
   select{
     outline:2px solid #fff;
     border:1px solid $grey-1;
+    padding:$gutter-one-quarter;
     &:focus {
       outline:2px solid $focus-colour;
       border:1px solid $focus-colour;
